[package]
name = "bongomoose"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [ "bevy_dynamic_plugin", "bevy_gilrs", "bevy_gltf", "bevy_wgpu", "bevy_winit", "render", "png", "hdr", "x11", "dynamic"] } 
#bevy = { version = "0.5.0", default-features = false, features = [ "bevy_dynamic_plugin", "bevy_gilrs", "bevy_gltf", "bevy_wgpu", "bevy_winit", "render", "png", "hdr", "x11"] } 
bevy_kira_audio = {version = "0.5", features = ["ogg"]}

osuparse = "2.0"

#[build-dependencies]
#bindgen = "0.53.2"

[profile.dev]
opt-level = 2
